러닝로그(이미지 포함) 업데이트